yehhhh new website

--- a/index.html
+++ b/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/e0a0bf999b.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Adrian Lobo</title>
   </head>
   <body>
     <div class="main">
-      <h1>Adrian Lobo</h1>
+      <h1 class="name">Adrian Lobo</h1>
+      <div class="nav">
+        <ul class="navlist">
+          <li class="navitem">Projects</li>
+          <li class="navitem">Skills</li>
+        </ul>
+      </div>
+      <div class="socials">
+        <ul>
+          <li class="social">
+            <a href="https://github.com/LoboAdrian"
+              ><i class="fab fa-github fa-5x"></i
+            ></a>
+          </li>
+          <li class="social">
+            <a href="https://twitter.com/LoboAdrian_"
+              ><i class="fab fa-twitter fa-5x"></i
+            ></a>
+          </li>
+          <li class="social">
+            <a href="https://www.linkedin.com/in/loboadrian/"
+              ><i class="fab fa-linkedin fa-5x"></i
+            ></a>
+          </li>
+          <li class="social">
+            <a href="mailto:alf8aml04@gmail.com"
+              ><i class="fas fa-envelope fa-5x"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
