Reposition navbar items

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,15 +12,21 @@
     <link rel="stylesheet" href="style.css" />
     <title>Adrian Lobo</title>
   </head>
+
   <body>
     <div class="main">
-      <h1 class="name">Adrian Lobo</h1>
-      <div class="nav">
-        <ul class="navlist">
-          <li class="navitem">Projects</li>
-          <li class="navitem">Skills</li>
-        </ul>
+
+      <div class="title-container">
+        <h1 class="name">Adrian Lobo</h1>
+
+        <div class="nav">
+          <ul class="navlist">
+            <li class="navitem">Projects</li>
+            <li class="navitem">Skills</li>
+          </ul>
+        </div>
       </div>
+
       <div class="socials">
         <ul>
           <li class="social">
@@ -44,6 +51,8 @@
           </li>
         </ul>
       </div>
+
     </div>
   </body>
+
 </html>
