--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,14 +14,14 @@
 
   <body>
     <div class="main">
-
       <div class="title-container">
         <h1 class="name">Adrian Lobo</h1>
 
         <div class="nav">
           <ul class="navlist">
-            <li class="navitem">Projects</li>
-            <li class="navitem">Skills</li>
+            <li class="navitem"><button class="btn">Projects</button></li>
+            <li class="navitem"><button class="btn">Skills</button></li>
+            <li class="navitem"><button class="btn">Item</button></li>
           </ul>
         </div>
       </div>
@@ -51,8 +50,6 @@
           </li>
         </ul>
       </div>
-
     </div>
   </body>
-
 </html>
