--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 
         <div class="nav">
           <ul class="navlist">
-            <li class="navitem"><button class="btn">Projects</button></li>
-            <li class="navitem"><button class="btn">Skills</button></li>
-            <li class="navitem"><button class="btn">Item</button></li>
+            <li class="navitem">
+              <a href="404.html"><button class="btn">Projects</button></a>
+            </li>
+            <li class="navitem">
+              <a href="404.html"><button class="btn">Skills</button></a>
+            </li>
+            <li class="navitem">
+              <a href="404.html"><button class="btn">Something</button></a>
+            </li>
           </ul>
         </div>
       </div>
